fix(1b3): backend R2/R3/R4 remediation + frontend home page