@@ -5,6 +5,8 @@ import com.fincontrol.dto.asset.OperationsRecentResponse;
 import com.fincontrol.dto.screenshot.ParseLogItem;
 import com.fincontrol.entity.AssetRaw;
 import com.fincontrol.mapper.AssetRawMapper;
+import com.fincontrol.mapper.AssetRawQueryMapper;
+import com.fincontrol.mapper.SnapshotMetaMapper;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -12,38 +14,38 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
-import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 /**
- * 1a.4 Slice C：AssetQueryService 业务测试（A4-S06 / S07 / S08）。
+ * 1a.4 + 1b.3 补救 AssetQueryService 业务测试。
  */
 @ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.LENIENT)
 class AssetQueryServiceTest {
 
     private static final Long USER_ID = 1L;
+    private static final LocalDate SNAP_DATE = LocalDate.of(2026, 7, 16);
 
-    @Mock
-    private AssetRawMapper assetRawMapper;
+    @Mock private AssetRawMapper assetRawMapper;
+    @Mock private AssetRawQueryMapper assetRawQueryMapper;
+    @Mock private ParseLogQueryService parseLogQueryService;
+    @Mock private CurrentSnapshotContext currentSnapshotContext;
 
-    @Mock
-    private ParseLogQueryService parseLogQueryService;
-
-    @InjectMocks
-    private AssetQueryService service;
+    @InjectMocks private AssetQueryService service;
 
     private AssetRaw rawOf(String fund, BigDecimal amount, BigDecimal profit, boolean latest) {
         AssetRaw row = new AssetRaw();
         row.setUserId(USER_ID);
-        row.setSnapshotDate(LocalDate.of(2026, 7, 16));
+        row.setSnapshotDate(SNAP_DATE);
         row.setFundName(fund);
         row.setCategory("余额类");
         row.setAmount(amount);
@@ -55,204 +57,138 @@ class AssetQueryServiceTest {
 
     @BeforeEach
     void setUp() {
+        when(currentSnapshotContext.resolveCurrentDate(USER_ID)).thenReturn(SNAP_DATE);
     }
 
     @Test
-    @DisplayName("A4-S06: 余额汇总只累加 余额类+is_latest=true")
-    void balance_onlyBalanceCategoryAndLatest() {
-        when(assetRawMapper.selectBalanceByUser(USER_ID)).thenReturn(List.of(
-                rawOf("余额宝", new BigDecimal("418.46"), new BigDecimal("1.56"), true),
-                rawOf("余额", new BigDecimal("0.00"), BigDecimal.ZERO, true),
-                rawOf("IGNORE", new BigDecimal("999.00"), BigDecimal.ZERO, false)));
+    @DisplayName("1b.3 余额汇总只读取 currentDate 的余额类 is_latest=1 行")
+    void balance_currentDateOnly() {
+        when(assetRawQueryMapper.selectCurrentBalanceByUser(USER_ID, SNAP_DATE))
+                .thenReturn(List.of(
+                        rawOf("余额宝", new BigDecimal("308.86"), new BigDecimal("1.90"), true)));
 
         AssetBalanceResponse resp = service.getBalance(USER_ID);
 
-        assertThat(resp.getBalanceFundTotal()).isEqualByComparingTo("418.46");
-        assertThat(resp.getItems()).hasSize(2);
-        assertThat(resp.getItems().get(0).getFundName()).isEqualTo("余额宝");
-        assertThat(resp.getItems().get(0).getCategory()).isEqualTo("余额类");
-        assertThat(resp.getItems().get(0).getProfit()).isEqualByComparingTo("1.56");
-        assertThat(resp.getSnapshotDate()).isEqualTo(LocalDate.of(2026, 7, 16));
+        assertThat(resp.getBalanceFundTotal()).isEqualByComparingTo("308.86");
+        assertThat(resp.getSnapshotDate()).isEqualTo(SNAP_DATE);
     }
 
     @Test
-    @DisplayName("A4-S06: 余额无数据返回 total=0 + items=[]")
-    void balance_emptyData() {
-        when(assetRawMapper.selectBalanceByUser(USER_ID)).thenReturn(Collections.emptyList());
-
+    @DisplayName("1b.3 currentDate=null 时返回 total=0 + items=[]")
+    void balance_noCurrentDate() {
+        when(currentSnapshotContext.resolveCurrentDate(USER_ID)).thenReturn(null);
         AssetBalanceResponse resp = service.getBalance(USER_ID);
-
         assertThat(resp.getBalanceFundTotal()).isEqualByComparingTo("0");
         assertThat(resp.getItems()).isEmpty();
         assertThat(resp.getSnapshotDate()).isNull();
     }
 
     @Test
-    @DisplayName("A4-S07: 解析活动使用 chat_history 派生，不宣称为入库")
-    void operationsRecent_derivedFromParseLogs() {
-        LocalDateTime now = LocalDateTime.of(2026, 7, 16, 10, 30);
-        ParseLogItem success = new ParseLogItem();
-        success.setLogId(1L);
-        success.setConversationId("conv-1");
-        success.setSnapshotDate(LocalDate.of(2026, 7, 16));
-        success.setFundCount(18);
-        success.setStatus("imported");
-        success.setCreatedAt(now);
-        ParseLogItem failed = new ParseLogItem();
-        failed.setLogId(2L);
-        failed.setConversationId("conv-2");
-        failed.setFundCount(0);
-        failed.setStatus("parse_failed");
-        failed.setCreatedAt(now.minusMinutes(5));
-        when(parseLogQueryService.listLatest(USER_ID, 5)).thenReturn(List.of(success, failed));
+    @DisplayName("1b.3 R2 解析历史：fundCount>0 + status=imported → summary 显示真实只数")
+    void operationsRecent_fundCount_positive() {
+        ParseLogItem item = new ParseLogItem();
+        item.setLogId(1L);
+        item.setConversationId("conv-1");
+        item.setSnapshotDate(SNAP_DATE);
+        item.setFundCount(19);
+        item.setStatus("imported");
+        when(parseLogQueryService.listLatest(USER_ID, 5)).thenReturn(List.of(item));
 
         OperationsRecentResponse resp = service.getRecentOperations(USER_ID, 5);
-
-        assertThat(resp.getItems()).hasSize(2);
-        assertThat(resp.getItems().get(0).getOperationType()).isEqualTo("screenshot_parse");
-        assertThat(resp.getItems().get(0).getSummary()).isEqualTo("解析 18 只基金");
-        assertThat(resp.getItems().get(1).getSummary()).isEqualTo("截图解析失败");
-        verify(parseLogQueryService).listLatest(USER_ID, 5);
+        assertThat(resp.getItems().get(0).getSummary()).isEqualTo("解析 19 只基金");
     }
 
     @Test
-    @DisplayName("A4-S07: 解析活动 limit 自动夹在 1–100")
-    void operationsRecent_limitClamp() {
-        when(parseLogQueryService.listLatest(USER_ID, 1)).thenReturn(Collections.emptyList());
-        when(parseLogQueryService.listLatest(USER_ID, 100)).thenReturn(Collections.emptyList());
+    @DisplayName("1b.3 R2 解析历史：fundCount=0 + status=imported + parseError → 基金数未知 + 错误")
+    void operationsRecent_fundCount_zero_with_error() {
+        ParseLogItem item = new ParseLogItem();
+        item.setLogId(2L);
+        item.setConversationId("conv-2");
+        item.setFundCount(0);
+        item.setStatus("imported");
+        item.setParseError("无法从模型响应中恢复结构：no JSON");
+        when(parseLogQueryService.listLatest(USER_ID, 5)).thenReturn(List.of(item));
 
-        service.getRecentOperations(USER_ID, 0);
-        service.getRecentOperations(USER_ID, 9999);
-
-        verify(parseLogQueryService).listLatest(USER_ID, 1);
-        verify(parseLogQueryService).listLatest(USER_ID, 100);
+        OperationsRecentResponse resp = service.getRecentOperations(USER_ID, 5);
+        assertThat(resp.getItems().get(0).getSummary())
+                .isEqualTo("解析失败：无法从模型响应中恢复结构：no JSON");
     }
 
     @Test
-    @DisplayName("1b.2 累计 + 持有 收益: 正常（正累计 + 正持有，返 5 字段）")
-    void cumulativeReturn_positiveCumAndHold() {
+    @DisplayName("1b.3 R2 解析历史：parse_failed → 截图解析失败")
+    void operationsRecent_parseFailed() {
+        ParseLogItem item = new ParseLogItem();
+        item.setLogId(3L);
+        item.setConversationId("conv-3");
+        item.setFundCount(0);
+        item.setStatus("parse_failed");
+        when(parseLogQueryService.listLatest(USER_ID, 5)).thenReturn(List.of(item));
+
+        OperationsRecentResponse resp = service.getRecentOperations(USER_ID, 5);
+        assertThat(resp.getItems().get(0).getSummary()).isEqualTo("截图解析失败");
+    }
+
+    @Test
+    @DisplayName("1b.3 R2 解析历史：fundCount=0 + 无 parseError + imported → 基金数未知")
+    void operationsRecent_fundCount_zero_no_error() {
+        ParseLogItem item = new ParseLogItem();
+        item.setLogId(4L);
+        item.setConversationId("conv-4");
+        item.setFundCount(0);
+        item.setStatus("imported");
+        when(parseLogQueryService.listLatest(USER_ID, 5)).thenReturn(List.of(item));
+
+        OperationsRecentResponse resp = service.getRecentOperations(USER_ID, 5);
+        assertThat(resp.getItems().get(0).getSummary()).isEqualTo("基金数未知");
+    }
+
+    @Test
+    @DisplayName("1b.3 累计收益 currentDate=null → available=false")
+    void cumulativeReturn_noCurrentDate() {
+        when(currentSnapshotContext.resolveCurrentDate(USER_ID)).thenReturn(null);
+        var body = service.getCumulativeReturn(USER_ID);
+        assertThat(body.getAvailable()).isFalse();
+        assertThat(body.getMessage()).isEqualTo("尚未上传资产快照");
+    }
+
+    @Test
+    @DisplayName("1b.3 累计收益 currentDate 有值：按当日行汇总")
+    void cumulativeReturn_currentDateAggregates() {
         java.util.Map<String, Object> row = new java.util.HashMap<>();
         row.put("total_cumulative_profit", new BigDecimal("123.45"));
-        row.put("total_holding_profit",    new BigDecimal("20.00"));
-        row.put("total_amount",             new BigDecimal("1000.00"));
-        row.put("fund_count",               19);
-        row.put("snapshot_date",            "2026-07-16");
-        when(assetRawMapper.sumReturnFieldsByUser(USER_ID)).thenReturn(row);
+        row.put("total_holding_profit", new BigDecimal("20.00"));
+        row.put("total_amount", new BigDecimal("7884.68"));
+        row.put("fund_count", 19);
+        when(assetRawQueryMapper.sumReturnFieldsAtDate(USER_ID, SNAP_DATE)).thenReturn(row);
+        when(assetRawQueryMapper.selectCurrentBalanceByUser(USER_ID, SNAP_DATE))
+                .thenReturn(Collections.emptyList());
 
-        com.fincontrol.dto.asset.CumulativeReturnResponse body = service.getCumulativeReturn(USER_ID);
+        var body = service.getCumulativeReturn(USER_ID);
         assertThat(body.getAvailable()).isTrue();
-        assertThat(body.getAlgorithm()).isEqualTo("phase1_simple");
-        assertThat(body.getTotalCumulativeProfit()).isEqualByComparingTo(new BigDecimal("123.45"));
-        assertThat(body.getTotalHoldingProfit()).isEqualByComparingTo(new BigDecimal("20.00"));
-        assertThat(body.getTotalAmount()).isEqualByComparingTo(new BigDecimal("1000.00"));
-        assertThat(body.getReturnRate()).isEqualByComparingTo(new BigDecimal("0.123450"));
-        assertThat(body.getHoldingReturnRate()).isEqualByComparingTo(new BigDecimal("0.020000"));
         assertThat(body.getFundCount()).isEqualTo(19);
         assertThat(body.getSnapshotDate()).isEqualTo("2026-07-16");
+        assertThat(body.getTotalAmount()).isEqualByComparingTo("7884.68");
     }
 
     @Test
-    @DisplayName("1b.2 累计 + 持有 收益: 负累计 / 正持有（典型持仓场景：累计亏损但浮盈）")
-    void cumulativeReturn_negativeCumPositiveHold() {
-        java.util.Map<String, Object> row = new java.util.HashMap<>();
-        row.put("total_cumulative_profit", new BigDecimal("-50.00"));
-        row.put("total_holding_profit",    new BigDecimal("30.00"));
-        row.put("total_amount",             new BigDecimal("1000.00"));
-        when(assetRawMapper.sumReturnFieldsByUser(USER_ID)).thenReturn(row);
-
-        com.fincontrol.dto.asset.CumulativeReturnResponse body = service.getCumulativeReturn(USER_ID);
-        assertThat(body.getReturnRate()).isEqualByComparingTo(new BigDecimal("-0.050000"));
-        assertThat(body.getHoldingReturnRate()).isEqualByComparingTo(new BigDecimal("0.030000"));
-    }
-
-    @Test
-    @DisplayName("1b.2 累计 + 持有 收益: 总额为 0 时两个 returnRate=0（避免除零）")
-    void cumulativeReturn_zeroAmount_returnsZero() {
-        java.util.Map<String, Object> row = new java.util.HashMap<>();
-        row.put("total_cumulative_profit", BigDecimal.ZERO);
-        row.put("total_holding_profit",    BigDecimal.ZERO);
-        row.put("total_amount",             BigDecimal.ZERO);
-        when(assetRawMapper.sumReturnFieldsByUser(USER_ID)).thenReturn(row);
-
-        com.fincontrol.dto.asset.CumulativeReturnResponse body = service.getCumulativeReturn(USER_ID);
-        assertThat(body.getReturnRate()).isEqualByComparingTo(BigDecimal.ZERO);
-        assertThat(body.getHoldingReturnRate()).isEqualByComparingTo(BigDecimal.ZERO);
-        assertThat(body.getAvailable()).isTrue();
-    }
-
-    // ============================================================
-    // 决策 25 v3：余额宝 fallback 校正测试
-    // ============================================================
-
-    @Test
-    @DisplayName("1b.2 决策25v3: 余额宝 holding=NULL+cumulative=1.90 → fallback → status=included, totalHolding = raw + 1.90")
+    @DisplayName("1b.3 决策25v3: 余额宝 holding=NULL+cumulative=1.90 → included, 校正 1.90")
     void cumulativeReturn_balanceFundFallback_included() {
         java.util.Map<String, Object> row = new java.util.HashMap<>();
         row.put("total_cumulative_profit", new BigDecimal("-50.00"));
-        row.put("total_holding_profit",    new BigDecimal("-36.55"));  // 不含余额宝（已 SUM 但余额宝 holding=NULL 不计入）
-        row.put("total_amount",             new BigDecimal("1000.00"));
-        row.put("fund_count",               19);
-        row.put("snapshot_date",            "2026-07-16");
-        when(assetRawMapper.sumReturnFieldsByUser(USER_ID)).thenReturn(row);
-
-        // 模拟 selectBalanceByUser 返余额宝行（holding=NULL, cumulative=1.90）
-        com.fincontrol.entity.AssetRaw baoBao = new com.fincontrol.entity.AssetRaw();
-        baoBao.setCategory("余额类");
-        baoBao.setAmount(new BigDecimal("308.86"));
-        baoBao.setHoldingProfit(null);  // 关键：NULL
-        baoBao.setCumulativeProfit(new BigDecimal("1.90"));
-        when(assetRawMapper.selectBalanceByUser(USER_ID)).thenReturn(List.of(baoBao));
-
-        com.fincontrol.dto.asset.CumulativeReturnResponse body = service.getCumulativeReturn(USER_ID);
-        assertThat(body.getBalanceFundStatus()).isEqualTo("included");
-        assertThat(body.getBalanceFundAdjustment()).isEqualByComparingTo(new BigDecimal("1.90"));
-        assertThat(body.getRawHoldingProfit()).isEqualByComparingTo(new BigDecimal("-36.55"));
-        // 校正后: -36.55 + 1.90 = -34.65
-        assertThat(body.getTotalHoldingProfit()).isEqualByComparingTo(new BigDecimal("-34.65"));
-        // holdingReturnRate 重新算: -34.65 / 1000 = -0.034650
-        assertThat(body.getHoldingReturnRate()).isEqualByComparingTo(new BigDecimal("-0.034650"));
-    }
-
-    @Test
-    @DisplayName("1b.2 决策25v3: 余额宝两项都 NULL → status=excluded_unknown, adjustment=0")
-    void cumulativeReturn_balanceFundFallback_excludedUnknown() {
-        java.util.Map<String, Object> row = new java.util.HashMap<>();
-        row.put("total_cumulative_profit", new BigDecimal("-50.00"));
-        row.put("total_holding_profit",    new BigDecimal("-36.55"));
-        row.put("total_amount",             new BigDecimal("1000.00"));
-        when(assetRawMapper.sumReturnFieldsByUser(USER_ID)).thenReturn(row);
-
-        // 模拟 selectBalanceByUser 返余额宝行（两项都 NULL）
+        row.put("total_holding_profit", new BigDecimal("-36.55"));
+        row.put("total_amount", new BigDecimal("7884.68"));
+        when(assetRawQueryMapper.sumReturnFieldsAtDate(USER_ID, SNAP_DATE)).thenReturn(row);
         com.fincontrol.entity.AssetRaw baoBao = new com.fincontrol.entity.AssetRaw();
         baoBao.setCategory("余额类");
         baoBao.setAmount(new BigDecimal("308.86"));
         baoBao.setHoldingProfit(null);
-        baoBao.setCumulativeProfit(null);  // 也 NULL
-        when(assetRawMapper.selectBalanceByUser(USER_ID)).thenReturn(List.of(baoBao));
+        baoBao.setCumulativeProfit(new BigDecimal("1.90"));
+        when(assetRawQueryMapper.selectCurrentBalanceByUser(USER_ID, SNAP_DATE))
+                .thenReturn(List.of(baoBao));
 
-        com.fincontrol.dto.asset.CumulativeReturnResponse body = service.getCumulativeReturn(USER_ID);
-        assertThat(body.getBalanceFundStatus()).isEqualTo("excluded_unknown");
-        assertThat(body.getBalanceFundAdjustment()).isEqualByComparingTo(BigDecimal.ZERO);
-        assertThat(body.getTotalHoldingProfit()).isEqualByComparingTo(new BigDecimal("-36.55"));
-    }
-
-    @Test
-    @DisplayName("1b.2 决策25v3: 没余额类持仓 → status=normal, 不校正")
-    void cumulativeReturn_balanceFundFallback_normal() {
-        java.util.Map<String, Object> row = new java.util.HashMap<>();
-        row.put("total_cumulative_profit", new BigDecimal("-50.00"));
-        row.put("total_holding_profit",    new BigDecimal("20.00"));
-        row.put("total_amount",             new BigDecimal("1000.00"));
-        when(assetRawMapper.sumReturnFieldsByUser(USER_ID)).thenReturn(row);
-
-        // 模拟 selectBalanceByUser 返空（无余额类持仓）
-        when(assetRawMapper.selectBalanceByUser(USER_ID)).thenReturn(Collections.emptyList());
-
-        com.fincontrol.dto.asset.CumulativeReturnResponse body = service.getCumulativeReturn(USER_ID);
-        assertThat(body.getBalanceFundStatus()).isEqualTo("normal");
-        assertThat(body.getBalanceFundAdjustment()).isEqualByComparingTo(BigDecimal.ZERO);
-        assertThat(body.getTotalHoldingProfit()).isEqualByComparingTo(new BigDecimal("20.00"));  // 不校正
+        var body = service.getCumulativeReturn(USER_ID);
+        assertThat(body.getBalanceFundStatus()).isEqualTo("included");
+        assertThat(body.getBalanceFundAdjustment()).isEqualByComparingTo(new BigDecimal("1.90"));
+        assertThat(body.getTotalHoldingProfit()).isEqualByComparingTo(new BigDecimal("-34.65"));
     }
 }
-
-
